2008-06-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nnmairix.el: Require CL.

2008-06-15  David Engster  <dengste@eml.cc>

	* nnimap.el (nnimap-request-delete-group): Unselect group if necessary.

2008-06-14  Aidan Kehoe  <kehoea@parhasard.net>

	* gnus-util.el (gnus-put-display-table, gnus-get-display-table):
	New macros that expand to an `aset'/`aref' call under Emacs, and to a
	runtime choice under XEmacs.

	* gnus-sum.el (gnus-summary-set-display-table):
	Use `gnus-put-display-table', `gnus-get-display-table',
	`gnus-set-display-table' for the display table, instead of `aset'.

	* gnus-xmas.el (gnus-xmas-summary-set-display-table):
	Use `gnus-put-display-table', `gnus-get-display-table',
	`gnus-set-display-table' for the display table.

2008-06-14  Reiner Steib  <Reiner.Steib@gmx.de>

	* nnmairix.el: Add autoloads.

2008-06-14  Reiner Steib  <Reiner.Steib@gmx.de>

	* nnmairix.el (nnmairix-delete-recreate-group)
	(nnmairix-update-and-clear-marks): Fix error messages.

2008-06-14  David Engster  <dengste@eml.cc>

	* nnmairix.el: Upgrade to version 0.6.
	(nnmairix-group-toggle-propmarks-this-group)
	(nnmairix-group-toggle-readmarks-this-group)
	(nnmairix-group-delete-recreate-this-group)
	(nnmairix-group-toggle-allowfast-this-group, nnmairix-propagate-marks)
	(nnmairix-remove-tick-mark-original-article): New commands.
	(nnmairix-mairix-search-options, nnmairix-propagate-marks-upon-close)
	(nnmairix-propagate-marks-to-nnmairix-groups)
	(nnmairix-only-use-registry, nnmairix-allowfast-default)
	(nnmairix-marks-cache, nnmairix-version-output): New variables.
	(nnmairix-request-set-mark, nnmairix-request-update-info): New back end
	functions needed for marks propagation and manipulation of read marks.
	(nnmairix-update-groups): New function.
	(nnmairix-get-groups-from-server, nnmairix-delete-recreate-group)
	(nnmairix-determine-original-group-from-registry)
	(nnmairix-determine-original-group-from-path)
	(nnmairix-get-group-from-file-path, nnmairix-map-range)